[metadata]
name = pyroject
version = attr: pyroject.__version__
author = PatHarrison
author_email = patrickgharrison@outlook.com
description = Tool for creating new Python projects/
long_description = file: README.rst
license = MIT
classifiers = 
    Programming Language :: Python :: 3

[options]
zip_safe = False
package_dir = 
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    executable-name = pyroject.module:function
